--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,23 @@
             <artifactId>cucumber-java</artifactId>
             <version>6.10.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>6.10.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+
+
 
 </project>
